@@ -59,6 +59,7 @@ my %reg_legal =
                        'admin' => "is set if any admin_* variable is set (note that admin configsets can create new variables)",
                          'any' => "is set if any of dup, taboo, admin, mime, or bad_approval is set",
                 'bad_approval' => "is set if someone tried to do use a classic approval method and gave a bad password",
+        'body_length_exceeded' => "is set if the message body is larger than the maxlength setting",
                        'bytes' => "contains the byte count of the message",
         'days_since_subscribe' => "contains the number of days since the user signed up (used for a cooling off period before allowing posting)",
                          'dup' => "is set if any of dup_checksum, dup_partial_checksum, or dup_msg_id are set",
@@ -355,6 +356,7 @@ my %commands =
                     'any'                          => 1,
                     'bytes'                        => 2,
                     'bad_approval'                 => 1,
+                    'body_length_exceeded'         => 1,
                     'taboo'                        => 2,
                     'admin'                        => 2,
                     'days_since_subscribe'         => 2,
